--- a/SampleProject1/Dockerfile
+++ b/SampleProject1/Dockerfile
@@ -5,7 +5,9 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 3. Copy the HelloWorld.java file from your local machine into the container at /app
-COPY src\main\java\com\example\App .
+
+CMD cd src\main\java\com\example\
+COPY App .
 
 # 4. Compile the HelloWorld.java file
 RUN javac App
