--- a/SampleProject1/Dockerfile
+++ b/SampleProject1/Dockerfile
@@ -5,12 +5,10 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 3. Copy the HelloWorld.java file from your local machine into the container at /app
-
-CMD cd src\main\java\com\example\
-COPY App.java .
+COPY src\main\java\com\example\App .
 
 # 4. Compile the HelloWorld.java file
-RUN javac App.java
+RUN javac App
 
 # 5. Run the compiled HelloWorld class
 CMD ["java", "App"]
