--- a/SampleProject1/Dockerfile
+++ b/SampleProject1/Dockerfile
@@ -5,10 +5,13 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 3. Copy the HelloWorld.java file from your local machine into the container at /app
-COPY src\main\java\com\example\App .
+COPY src/main/java/com/example/App .
 
-# 4. Compile the HelloWorld.java file
+# Debugging: List files to ensure the copy was successful
+RUN ls -la .
+
+# 4. Compile the App.java file
 RUN javac App
 
-# 5. Run the compiled HelloWorld class
+# 5. Run the compiled App class
 CMD ["java", "App"]
