--- a/SampleProject1/Dockerfile
+++ b/SampleProject1/Dockerfile
@@ -5,13 +5,13 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 3. Copy the HelloWorld.java file from your local machine into the container at /app
-COPY src/main/java/com/example/App .
+COPY src/main/java/com/example/HelloWorld .
 
 # Debugging: List files to ensure the copy was successful
 RUN ls -la .
 
 # 4. Compile the App.java file
-RUN javac App
+RUN javac HelloWorld
 
 # 5. Run the compiled App class
 CMD ["java", "App"]
