--- a/SampleProject1/Dockerfile
+++ b/SampleProject1/Dockerfile
@@ -7,11 +7,8 @@ WORKDIR /app
 # 3. Copy the HelloWorld.java file from your local machine into the container at /app
 COPY src/main/java/com/example/HelloWorld .
 
-# Debugging: List files to ensure the copy was successful
-RUN ls -la .
-
 # 4. Compile the App.java file
-RUN javac HelloWorld
+RUN mvn clean package
 
 # 5. Run the compiled App class
 CMD ["java", "App"]
